--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,5 +1,21 @@
 <p class="text-center">
 
+    {% for post in paginator.posts %}
+              <div class="wow fadeIn">
+              {% if post.position == "left" %}
+                {% include content-left.html %}
+              {% endif %}
+
+              {% if post.position == "right" %}
+                {% include content-right.html %}
+              {% endif %}
+              </div>
+            {% endfor %}
+
+ {% include content-left.html %}
+<img class="img-responsive img-circle my-profile-pic" src="{{ site.data.about.featured_image }}">
+
+ {% include content-right.html %}
 <element class="highlight">
     <element class="go">
     {{ site.data.about.intro }}
@@ -9,9 +25,5 @@
 <br><br>
 
 {{ site.data.about.outro }}
-
-<br><br><br>
-
-<img class="img-responsive img-circle my-profile-pic" src="{{ site.data.about.featured_image }}">
 
 </p>
