--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,4 @@
-<p class="main-info">
+<p class="text-center">
     
  {% include content-left.html %}
 <img class="img-responsive img-circle my-profile-pic" src="{{ site.data.about.featured_image }}">
