--- a/_includes/home-hero.html
+++ b/_includes/home-hero.html
@@ -12,11 +12,11 @@
           <h3 class="text-center">{{site.description}}</h3>
           {% endif %}
 
-          
+          <div class = "main-image">
           <div class="col-xs-12 col-md-6 pull-left">
             <img class="img-responsive img-circle my-profile-pic" src="{{ site.url }}/img/Picture.png">
           </div>
-  
+          </div>
      
           <div class="col-xs-12 col-md-6 pull-right">
             {% include about.html %}
