--- a/_includes/home-hero.html
+++ b/_includes/home-hero.html
@@ -14,7 +14,7 @@
 
           <div class = "main-image">
           <div class="col-xs-12 col-md-6 pull-left">
-            <img class="img-responsive img-circle my-profile-pic" src="{{ site.url }}Website/img/Picture.png">
+            <img class="img-responsive img-circle my-profile-pic" src="{{ site.url }}/Website/img/Picture.png">
           </div>
           </div>
      
