--- a/_includes/home-hero.html
+++ b/_includes/home-hero.html
@@ -12,7 +12,7 @@
           <h3 class="text-center">{{site.description}}</h3>
           {% endif %}
 
-          <div class="col-md-4 col-md-8 pull-left">
+          <div class="col-xs-16 col-md-6 pull-left">
             <br><br>
             <img class="img-responsive img-circle my-profile-pic" src="{{ site.url }}/Website/img/Picture.png">
           
@@ -32,7 +32,7 @@
             {% endif %}
           </div>
 
-          <div class="col-md-4 col-md-8 pull-right">
+          <div class="col-xs-16 col-md-6 pull-right">
             {% include about.html %}
           </div>
           
