--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@
       <div class="col-md-12">
 
         <div id="skills">
-          {% if site.skills.section_title != empty %}
+          {% if site.data.skills.section_title != empty %}
           <h2 class="section-title text-center">{{ site.data.skills.section_title }}</h2>
           {% endif %}
           {% if site.data.skills.section_subtitle != empty %}
@@ -31,7 +31,7 @@
           {% endif %}
           {% endfor %}
         </div>
-
+      
         <div class="break"></div>
 
         <div id="projects">
@@ -58,9 +58,9 @@
         {% endif %}
         {% endfor %}
         </div>
-          
+
         <div class="break"></div>
-          
+
         <div id="gamejams">
         {% if site.data.gamejams.section_title != empty %}
           <h2 class="section-title text-center">{{ site.data.gamejams.section_title }}</h2>
@@ -85,7 +85,9 @@
         {% endif %}
         {% endfor %}
         </div>
-        
+
+        {% include pagination.html %}
+
       </div>
     </div>
   </div>
