--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,18 +7,18 @@
     <div class="row">
       <div class="col-md-12">
 
-        <div id="skills">
-          {% if site.data.skills.section_title != empty %}
-            <h2 class="section-title text-center">{{ site.data.skills.section_title }}</h2>
+        <div id="programming-languages">
+          {% if site.programming-languages.section_title != empty %}
+          <h2 class="section-title text-center">{{ site.data.programming-languages.section_title }}</h2>
           {% endif %}
-          {% if site.data.skills.section_subtitle != empty %}
-            <p class="section-subtitle text-center">{{ site.data.skills.section_subtitle }}</p>
+          {% if site.data.programming-languages.section_subtitle != empty %}
+          <p class="section-subtitle text-center">{{ site.data.programming-languages.section_subtitle }}</p>
           {% endif %}
       
           <div class="break"></div>
       
           {% for post in paginator.posts %}
-          {% if post.type == "skill" %}
+          {% if post.type == "programming-language" %}
             <div class="wow fadeIn">
             {% if post.position == "left" %}
             {% include content-left.html %}
@@ -31,7 +31,61 @@
           {% endif %}
           {% endfor %}
         </div>
-      
+
+        <div class="break"></div>
+
+        <div id="libraries">
+        {% if site.data.libraries.section_title != empty %}
+          <h2 class="section-title text-center">{{ site.data.libraries.section_title }}</h2>
+        {% endif %}
+        {% if site.data.libraries.section_subtitle != empty %}
+          <p class="section-subtitle text-center">{{ site.data.libraries.section_subtitle }}</p>
+        {% endif %}
+
+        <div class="break"></div>
+
+        {% for post in paginator.posts %}
+        {% if post.type == "library" %}
+          <div class="wow fadeIn">
+          {% if post.position == "left" %}
+          {% include content-left.html %}
+          {% endif %}
+
+          {% if post.position == "right" %}
+          {% include content-right.html %}
+          {% endif %}
+          </div>
+        {% endif %}
+        {% endfor %}
+        </div>
+
+        <div class="break"></div>
+
+        <div id="software">
+        {% if site.data.software.section_title != empty %}
+          <h2 class="section-title text-center">{{ site.data.software.section_title }}</h2>
+        {% endif %}
+        {% if site.data.software.section_subtitle != empty %}
+          <p class="section-subtitle text-center">{{ site.data.software.section_subtitle }}</p>
+        {% endif %}
+
+        <div class="break"></div>
+
+        {% for post in paginator.posts %}
+        {% if post.type == "software_type" %}
+          <div class="wow fadeIn">
+          {% if post.position == "left" %}
+          {% include content-left.html %}
+          {% endif %}
+
+          {% if post.position == "right" %}
+          {% include content-right.html %}
+          {% endif %}
+          </div>
+        {% endif %}
+        {% endfor %}
+        </div>
+
         <div class="break"></div>
 
         <div id="projects">
@@ -58,34 +112,7 @@
         {% endif %}
         {% endfor %}
         </div>
-
-        <div class="break"></div>
-
-        <div id="gamejams">
-        {% if site.data.gamejams.section_title != empty %}
-          <h2 class="section-title text-center">{{ site.data.gamejams.section_title }}</h2>
-        {% endif %}
-        {% if site.data.gamejams.section_subtitle != empty %}
-          <p class="section-subtitle text-center">{{ site.data.gamejams.section_subtitle }}</p>
-        {% endif %}
-
-        <div class="break"></div>
-
-        {% for post in paginator.posts %}
-        {% if post.type == "gamejam" %}
-          <div class="wow fadeIn">
-          {% if post.position == "left" %}
-          {% include content-left.html %}
-          {% endif %}
-
-          {% if post.position == "right" %}
-          {% include content-right.html %}
-          {% endif %}
-          </div>
-        {% endif %}
-        {% endfor %}
-        </div>
-
+        
       </div>
     </div>
   </div>
