--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,17 +16,17 @@
           {% endif %}
       
           {% if site.data.skills.section_programming_languages != empty %}
-          <h4 class="section-subtitle text-center">{{ site.data.skills.section_programming_languages }}</h4>
+          <h4 class="text-center">{{ site.data.skills.section_programming_languages }}</h4>
           {% endif %}
           
 
           {% if site.data.skills.section_libraries != empty %}
-          <h4 class="section-subtitle text-center">{{ site.data.skills.section_libraries }}</h4>
+          <h4 class="text-center">{{ site.data.skills.section_libraries }}</h4>
           {% endif %}
             
             
           {% if site.data.skills.section software != empty %}
-          <h4 class="section-subtitle text-center">{{ site.data.skills.section software }}</h4>
+          <h4 class="text-center">{{ site.data.skills.section software }}</h4>
           {% endif %}
             
             
