--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,7 @@
           
           {% if site.data.skills.section_libraries != empty %}
           <h4 class="section-subtitle text-center">{{ site.data.skills.section_libraries }}</h4>
-            {% include header.html %}
+            {% include libraries.html %}
           {% endif %}
           
           {% if site.data.skills.section software != empty %}
