--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,17 +16,17 @@
           {% endif %}
       
           {% if site.data.skills.section_programming_languages != empty %}
-          <h4 class="section-subtitle text-center">{{ site.data.skills.section_programming_languages }}</h4>
+          <p class="section-subtitle text-center">{{ site.data.skills.section_programming_languages }}</p>
             {% include programming_languages.html %}
           {% endif %}
           
           {% if site.data.skills.section_libraries != empty %}
-          <h4 class="section-subtitle text-center">{{ site.data.skills.section_libraries }}</h4>
+          <p class="section-subtitle text-center">{{ site.data.skills.section_libraries }}</p>
             {% include libraries.html %}
           {% endif %}
           
           {% if site.data.skills.section software != empty %}
-          <h4 class="section-subtitle text-center">{{ site.data.skills.section software }}</h4>
+          <p class="section-subtitle text-center">{{ site.data.skills.section software }}</p>
             {% include software.html %}
           {% endif %}
         </div>
