--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,23 +11,7 @@
           {% if site.data.skills.section_title != empty %}
           <h2 class="section-title text-center">{{ site.data.skills.section_title }}</h2>
           {% endif %}
-          {% if site.data.skills.section_subtitle != empty %}
-          <p class="section-subtitle text-center">{{ site.data.skills.section_subtitle }}</p>
-          {% endif %}
-          {% if site.data.skills.section_programming_languages != empty %}
-          <p class="section-subtitle text-center">{{ site.data.skills.section_programming_languages }}</p>
-            {% include programming_languages.html %}
-          {% endif %}
-            <br><br>
-          {% if site.data.skills.section_libraries != empty %}
-          <p class="section-subtitle text-center">{{ site.data.skills.section_libraries }}</p>
-            {% include libraries.html %}
-          {% endif %}
-            <br><br>
-          {% if site.data.skills.section_software != empty %}
-          <p class="section-subtitle text-center">{{ site.data.skills.section_software }}</p>
-            {% include software.html %}
-          {% endif %}
+            {% include skills.html %}
         </div>
           
           <br><br><br><br>
