--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,13 +12,13 @@
           <h2 class="section-title text-center">{{ site.data.skills.section_title }}</h2>
           {% endif %}
           {% if site.data.skills.section_programming_languages != empty %}
-          <h4 class="section-subtitle text-left">{{ site.data.skills.section_programming_languages }}</h4>
+          <h4 class="text-left">{{ site.data.skills.section_programming_languages }}</h4>
           {% endif %}
           {% if site.data.skills.section_libraries != empty %}
-          <h4 class="section-subtitle text-center">{{ site.data.skills.section_libraries }}</h4>
+          <h4 class="text-center">{{ site.data.skills.section_libraries }}</h4>
           {% endif %}
           {% if site.data.skills.section_software != empty %}
-          <h4 class="section-subtitle text-right">{{ site.data.skills.section_software }}</h4>
+          <h4 class="text-right">{{ site.data.skills.section_software }}</h4>
           {% endif %}
         </div>
           
