--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,15 +11,24 @@
           {% if site.data.skills.section_title != empty %}
           <h2 class="section-title text-center">{{ site.data.skills.section_title }}</h2>
           {% endif %}
+            
+          <div class="col-xs-12 col-md-6 pull-left">
           {% if site.data.skills.section_programming_languages != empty %}
           <h4 class="text-left">{{ site.data.skills.section_programming_languages }}</h4>
           {% endif %}
+          </div>
+            
+          <div class="col-xs-12 col-md-6 pull-center">
           {% if site.data.skills.section_libraries != empty %}
           <h4 class="text-center">{{ site.data.skills.section_libraries }}</h4>
           {% endif %}
+          </div>
+            
+          <div class="col-xs-12 col-md-6 pull-right">
           {% if site.data.skills.section_software != empty %}
           <h4 class="text-right">{{ site.data.skills.section_software }}</h4>
           {% endif %}
+          </div>
         </div>
           
           <br><br><br><br>
