--- a/css/style.scss
+++ b/css/style.scss
@@ -452,3 +452,7 @@ pre {
   height: 3px;
   background-color: #ECEFF1;
 }
+
+.column-left{ float: left; width: 33.333%; }
+.column-right{ float: right; width: 33.333%; }
+.column-center{ display: inline-block; width: 33.333%; }
