--- a/css/style.scss
+++ b/css/style.scss
@@ -453,6 +453,6 @@ pre {
   background-color: #ECEFF1;
 }
 
-.column-left{ float: left; width: 33.333%; }
-.column-right{ float: right; width: 33.333%; }
-.column-center{ display: inline-block; width: 33.333%; }
+.columns-3 { 
+  width: 33.333%; 
+}
