--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,6 +15,11 @@
           <div class="columns-3">
           {% if site.data.skills.section_libraries != empty %}
           <h4 class="text-center">{{ site.data.skills.section_libraries }}</h4>
+          <ul style="list-style-type:none;">
+            <li>- Dear ImGui</li>
+            <li>- SDL</li>
+            <li>- OpenGL</li>
+          </ul>
           {% endif %}
           </div>
             
