--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,26 +12,26 @@
           <h2 class="section-title text-center">{{ site.data.skills.section_title }}</h2>
           {% endif %}
           
-          <div class="columns-3">
-          {% if site.data.skills.section_libraries != empty %}
-          <h4 class="text-center">{{ site.data.skills.section_libraries }}</h4>
-          <ul style="list-style-type:none;">
-            <li>- Dear ImGui</li>
-            <li>- SDL</li>
-            <li>- OpenGL</li>
-          </ul>
+          <div class="columns-3 pull-left">
+          {% if site.data.skills.section_programming_languages != empty %}
+          <h3 class="text-center">{{ site.data.skills.section_programming_languages }}</h3>
           {% endif %}
           </div>
             
-          <div class="columns-3 pull-left">
-          {% if site.data.skills.section_programming_languages != empty %}
-          <h4 class="text-center">{{ site.data.skills.section_programming_languages }}</h4>
+          <div class="columns-3">
+          {% if site.data.skills.section_libraries != empty %}
+          <h3 class="text-center">{{ site.data.skills.section_libraries }}</h3>
+          <p class="text-center">
+            <li>- Dear ImGui</li>
+            <li>- SDL</li>
+            <li>- OpenGL</li>
+          </p>
           {% endif %}
           </div>
             
           <div class="columns-3 pull-right">
           {% if site.data.skills.section_software != empty %}
-          <h4 class="text-center">{{ site.data.skills.section_software }}</h4>
+          <h3 class="text-center">{{ site.data.skills.section_software }}</h3>
           {% endif %}
           </div>
         </div>
