--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,9 +22,11 @@
           {% if site.data.skills.section_libraries != empty %}
           <h3 class="text-center">{{ site.data.skills.section_libraries }}</h3>
           <p class="text-center">
-            <li>- Dear ImGui</li>
-            <li>- SDL</li>
-            <li>- OpenGL</li>
+            <ul style='list-style-type:none'>{{
+              <li>- Dear ImGui</li>
+              <li>- SDL</li>
+              <li>- OpenGL</li>}}
+            </ul>
           </p>
           {% endif %}
           </div>
