--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,13 +21,13 @@
           <div class="columns-3">
           {% if site.data.skills.section_libraries != empty %}
           <h3 class="text-center">{{ site.data.skills.section_libraries }}</h3>
-          <p class="text-center">{{
+          <h4 class="text-center">
             <ul style='list-style-type:none'>
               <li>- Dear ImGui</li>
               <li>- SDL</li>
               <li>- OpenGL</li>
-            </ul>}}
-          </p>
+            </ul>
+          </h4>
           {% endif %}
           </div>
             
