--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,11 +21,9 @@
           <div class="columns-3">
           {% if site.data.skills.section_libraries != empty %}
           <h3 class="text-center">{{ site.data.skills.section_libraries }}</h3>
-          <p class="text-center">
-            <li>Dear ImGui</li>
-            <li>SDL</li>
-            <li>OpenGL</li>
-          </p>
+          <p class="text-center"> Dear ImGui </p>
+          <p class="text-center"> SDL </p>
+          <p class="text-center"> OpenGL </p>
           {% endif %}
           </div>
             
