--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,9 +21,9 @@
           <div class="columns-3">
           {% if site.data.skills.section_libraries != empty %}
           <h3 class="text-center">{{ site.data.skills.section_libraries }}</h3>
-          <p class="text-center"> Dear ImGui </p>
-          <p class="text-center"> SDL </p>
-          <p class="text-center"> OpenGL </p>
+          <p class="text-center my-list"> Dear ImGui </p>
+          <p class="text-center my-list"> SDL </p>
+          <p class="text-center my-list"> OpenGL </p>
           {% endif %}
           </div>
             
