--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,10 +20,10 @@
             
           <div class="columns-3">
           {% if site.data.skills.section_libraries != empty %}
-          <h3 class="text-center">{{ site.data.skills.section_libraries }}</h3>
-          <p class="text-center my-list"> Dear ImGui </p>
-          <p class="text-center my-list"> SDL </p>
-          <p class="text-center my-list"> OpenGL </p>
+          <h3>{{ site.data.skills.section_libraries }}</h3>
+          Dear ImGui
+          SDL
+          OpenGL
           {% endif %}
           </div>
             
