--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@
       <div class="col-md-12">
 
         <div id="skills">
-          <div class="col-md-12">
+          <div class="row">
             {% if site.data.skills.section_title != empty %}
             <h2 class="section-title text-center">{{ site.data.skills.section_title }}</h2>
             {% endif %}
